@@ -37,7 +37,11 @@ User information and their associated photo albums are stored and accessed local
 ### Command Line
 1. Install JavaFX and add it to your PATH, note it as *PATH2JavaFX*
 3. Open */src* directory and compile with 
+
   `javac --module-path PATH2JavaFX/lib --add-modules javafx.controls Photos55/App/*.java`
+  
   `javac --module-path PATH2JavaFX/lib --add-modules javafx.controls Photos55/View/*.java`
-5. Run with 
-  `java --module-path PATH2JavaFX/lib -- add-modules javafx.controls Photos55.app.Photos55.App
+  
+4. Run with
+
+  `java --module-path PATH2JavaFX/lib --add-modules javafx.controls Photos55.app.Photos55.App`
